--- a/logins.html
+++ b/logins.html
@@ -24,7 +24,7 @@
     </div>
     <div class="action">
       <!-- <button onclick="location.href='./admin.html'">Register</button> -->
-      <button type="button" onclick="location.href='./index.html'">Login</button>
+      <button type="button" onclick="location.href='./home.html'">Login</button>
     </div>
   </form>
 </div>
