--- a/application.html
+++ b/application.html
@@ -254,7 +254,7 @@
             <input type="text" id="studentSignature" name="studentSignature"> -->
           </div>
     
-          <button class="submit" type="button" onclick="location.href='./index.html'" >Submit</button>
+          <button class="submit" type="submit" onclick="location.href='./home.html'" >Submit</button>
         </form>
       </div>
     </div>
